build(test): glob the platform-dependent files
- Add ctest command to print test case

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,14 +1,18 @@
 set(TEST_NAME ${PROJECT_NAME}_AllTests)
 
-file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false test.*.cpp)
+file(GLOB_RECURSE
+    TEST_SOURCES
+    LIST_DIRECTORIES false
+      test.*.cpp
+      test.*.${PLATFORM_EXTENSION}
+    )
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
-add_test(${TEST_NAME} ${TEST_NAME}) # for ctest
-#add_test(NAME ${TEST_NAME}
-#    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
-#    COMMAND ${TEST_NAME})
+add_test(NAME ${TEST_NAME} # for ctest
+    WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
+    COMMAND ${TEST_NAME} -d yes --order lex
+    )
 
-#add_definitions(-DGTEST_LANGUAGE_CXX11) # for gtest
 
 ## Compiler options
 include(../cmake/CompilerOptions.cmake)
@@ -18,6 +22,7 @@ set_project_options(${TEST_NAME})
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_BINARY_DIR})
 find_package(fmt REQUIRED)
 find_package(Catch2 REQUIRED)
+
 
 target_link_libraries(${TEST_NAME} PRIVATE fmt::fmt)
 target_compile_features(${TEST_NAME} PUBLIC cxx_std_17)
