--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: macos-10.15
     strategy:
       matrix:
-        build_type: [Debug, Release]
+        build_type: [Debug]
 
     steps:
       - uses: actions/checkout@v2
@@ -28,14 +28,14 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         run: conan install $GITHUB_WORKSPACE
 
-      - name: Configure
+      - name: CMake Configure
         working-directory: ${{runner.workspace}}/build
         run: |
           cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
                 -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=True \
                 -DENABLE_COVERAGE=False $GITHUB_WORKSPACE
 
-      - name: Build
+      - name: CMake Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build . --config ${{matrix.build_type}}
 
