--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,20 +6,20 @@ option(ENABLE_TESTS "Enable tests"                False)
 
 
 ## Sources common for all platforms .cpp .hpp
-if(${CMAKE_SYSTEM_NAME} MATCHES "Linux") # .cc .hh
+if (${CMAKE_SYSTEM_NAME} MATCHES "Linux") # .cc .hh
   set(PLATFORM_EXTENSION cc)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Windows") # .cxx .hxx
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows") # .cxx .hxx
   set(PLATFORM_EXTENSION cxx)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin") # OSX .c++ .h++
+elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin") # OSX .c++ .h++
   set(PLATFORM_EXTENSION c++)
-endif()
+endif ()
 
 file(GLOB_RECURSE
-    SOURCE_FILES
-      src/*.cpp
-      src/*.inl
-      src/*.${PLATFORM_EXTENSION}
-    )
+  SOURCE_FILES
+    src/*.cpp
+    src/*.inl
+    src/*.${PLATFORM_EXTENSION}
+)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
@@ -31,13 +31,13 @@ set_project_options(${PROJECT_NAME})
 
 ## Setup Conan
 # conan_cmake_run [see](https://github.com/selassje/eyeTracker/blob/master/CMakeLists.txt)
-if(NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
+if (NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
   message(STATUS "Downloading conan.cmake from https://github.com/conan-io/cmake-conan")
   file(DOWNLOAD
       "https://raw.githubusercontent.com/conan-io/cmake-conan/master/conan.cmake"
       "${CMAKE_BINARY_DIR}/conan.cmake"
       )
-endif()
+endif ()
 
 include(${CMAKE_BINARY_DIR}/conan.cmake)
 conan_cmake_run(CONANFILE conanfile.txt BASIC_SETUP NO_OUTPUT_DIRS)
@@ -58,7 +58,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE include)
 ## Check custom options
 if (ENABLE_PCH) # Since CMake 3.15
   target_precompile_headers(${PROJECT_NAME} INTERFACE <vector> <string> <map> <utility>)
-  message("PCH enabled")
+  message(STATUS "PCH enabled")
 endif ()
 
 if (ENABLE_TESTS)
