--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -48,5 +48,9 @@ jobs:
         run: cmake --build . --config ${{matrix.build_type}}
 
       - name: Test
+        working-directory: ${{runner.workspace}}/build/test/Debug
+        run: template_project_cpp_AllTests.exe
+
+      - name: CTest
         working-directory: ${{runner.workspace}}/build
-        run: ctest -V -C ${{matrix.build_type}} --output-on-failure
+        run: ctest -VV -C ${{matrix.build_type}} --output-on-failure
