--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -47,9 +47,17 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         run: cmake --build . --config ${{matrix.build_type}}
 
-#      - name: Test
-#        working-directory: ${{runner.workspace}}/build
-#        run: ${{runner.workspace}}/build/test/Debug/template_project_cpp_AllTests.exe
+      - name: Add DLL to path
+        working-directory: ${{runner.workspace}}/build
+        run: |
+          echo "${{runner.workspace}}/build" >> $PATH
+          echo "${{runner.workspace}}/build" >> $GITHUB_PATH
+          echo "PATH = $PATH"
+          echo "GITHUB_PATH = $GITHUB_PATH"
+
+      - name: Check symbols
+        working-directory: ${{runner.workspace}}/build
+        run: ldd ${{runner.workspace}}/build/test/Debug/template_project_cpp_AllTests.exe
 
       - name: CTest
         working-directory: ${{runner.workspace}}/build
