ci(win): fix shell, set path, refresh env

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -48,6 +48,7 @@ jobs:
         run: cmake --build . --config ${{matrix.build_type}}
 
       - name: Add DLL to path
+        shell: bash
         working-directory: ${{runner.workspace}}/build
         run: |
           echo "${{runner.workspace}}/build" >> $PATH
