--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -48,13 +48,13 @@ jobs:
         run: cmake --build . --config ${{matrix.build_type}}
 
       - name: Add DLL to path
-        shell: bash
+        shell: cmd
         working-directory: ${{runner.workspace}}/build
         run: |
-          echo "${{runner.workspace}}/build" >> $PATH
-          echo "${{runner.workspace}}/build" >> $GITHUB_PATH
-          echo "PATH = $PATH"
-          echo "GITHUB_PATH = $GITHUB_PATH"
+          echo "%runner.workspace%/build" >> %PATH%
+          echo "%runner.workspace%/build" >> %GITHUB_PATH%
+          echo "PATH = %PATH%"
+          echo "GITHUB_PATH = %GITHUB_PATH%"
 
       - name: Check symbols
         working-directory: ${{runner.workspace}}/build
