--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,8 @@ build_script:
 
 before_test:
   - ldd C:\projects\source\build\test\Debug\template_project_cpp_AllTests.exe
-  - cmd: set PATH=$PATH:C:\projects\source\build\
-  - cmd: RefreshEnv.cmd
+  - cmd: set PATH=%PATH%;C:\projects\source\build\
+  - cmd: echo "%PATH%"
 
 test_script:
   - C:\projects\source\build\test\Debug\template_project_cpp_AllTests.exe
