--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,12 +28,10 @@ build_script:
       cmake --build .
 
 before_test:
+  - ldd C:\projects\source\build\Debug\template_project_cpp.dll
   - ldd C:\projects\source\build\test\Debug\template_project_cpp_AllTests.exe
   - cmd: set PATH=%PATH%;C:\projects\source\build\
   - copy C:\projects\source\build\Debug\template_project_cpp.dll C:\projects\source\build\test\Debug\
 
 test_script:
-  - C:\projects\source\build\test\Debug\template_project_cpp_AllTests.exe
-
-on_failure:
   - cmd: ctest -VV -C Debug
