build: upgrade std to 20
- Upgrade fmt
- Add license badge

--- a/.gitignore
+++ b/.gitignore
@@ -32,11 +32,16 @@
 *.app
 *.bin
 
+
 # Build folders
 *cmake-build-*
 CMakeFiles/
 Makefile/
 build/
+
+
+# cmake files
+*.cmake
 
 # DEB packages
 *.deb
