refactor: remove appveyor
- Update compiler options
- Upgrade catch2
- Upgrade style
- Remove badges
- Fix code fences in doc

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,20 +1,19 @@
 set(TEST_NAME ${PROJECT_NAME}_AllTests)
 
 file(GLOB_RECURSE
-    TEST_SOURCES
-    LIST_DIRECTORIES false
-      test.*.cpp
-      test.*.${PLATFORM_EXTENSION}
-    )
+  TEST_SOURCES
+  LIST_DIRECTORIES false
+    test.*.cpp
+    test.*.${PLATFORM_EXTENSION}
+)
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
-add_test(NAME ${TEST_NAME} # for ctest
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-    COMMAND ${TEST_NAME} -d yes --order lex
+
+add_test(
+  NAME ${TEST_NAME}
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  COMMAND ${TEST_NAME}  --verbosity quiet --success --durations no --order decl # -? for catch2 help
 )
-message("** tests working directory: ${CMAKE_CURRENT_BINARY_DIR}")
-message("** project working directory: ${CMAKE_BINARY_DIR}")
-message("** runtime directory: ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
 
 ## Compiler options
@@ -29,6 +28,11 @@ find_package(Catch2 REQUIRED)
 
 
 ## Target
-target_link_libraries(${TEST_NAME} PRIVATE fmt::fmt ${PROJECT_NAME})
-target_compile_features(${TEST_NAME} PUBLIC cxx_std_20)
-target_include_directories(${TEST_NAME} PRIVATE ${Catch2_INCLUDE_DIRS} ../include)
+target_link_libraries(${TEST_NAME} PRIVATE ${PROJECT_NAME} ${catch2_LIBRARIES} ${fmt_LIBRARIES})
+
+target_include_directories(${TEST_NAME}
+  PRIVATE
+    ../include
+  PRIVATE SYSTEM
+    ${catch2_INCLUDE_DIRS}
+)
