--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -9,11 +9,11 @@ jobs:
       matrix:
         cxx: [g++-10]
         build_type: [Debug]
-        std: [17]
+        std: [20]
         os: [ubuntu-20.04]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Install coverage
         run: |
@@ -22,9 +22,12 @@ jobs:
 
       - name: Install and configure Conan
         run: |
-          pip3 install conan
+          pip3 install conan==1.62.0
           conan profile new default --detect
           conan profile update settings.compiler.libcxx=libstdc++11 default
+          conan profile update conf.tools.system.package_manager:mode=install default
+          conan profile show default
+          sudo apt-get update
 
       - name: Create Build Environment
         run: cmake -E make_directory ${{runner.workspace}}/build
