--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -10,13 +10,15 @@ jobs:
         build_type: [Debug]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Install and configure Conan
         run: |
-          brew install conan
+          brew install conan@1.62.0
           conan profile list
           conan profile new default --detect
+          conan profile update settings.compiler.libcxx=libstdc++11 default
+          conan profile update conf.tools.system.package_manager:mode=install default
           conan profile show default
 
       - name: Create Build Environment
