ci(linux): cleanup, remove comments
- Use quiet for apt

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -18,7 +18,7 @@ jobs:
 
       - name: Install python virtual environment
         run: |
-          sudo apt-get install python3-venv -y
+          sudo apt-get install python3-venv -y --quiet
           python3 -m venv $HOME/.venv
 
       - name: Activate python virtual environment
@@ -35,8 +35,8 @@ jobs:
 
       - name: Install packages
         run: |
-          sudo apt-get update
-          sudo apt-get install cmake ninja-build python3-pip lcov -y
+          sudo apt-get update --quiet
+          sudo apt-get install cmake ninja-build python3-pip lcov -y --quiet
           pip3 install --upgrade pip
           pip3 install coverage
 
@@ -61,7 +61,7 @@ jobs:
 
       - name: Test
         working-directory: ${{runner.workspace}}/build/
-        run: ctest --progress --verbose --build-config ${{matrix.build_type}} --output-on-failure
+        run: ctest --progress --build-config ${{matrix.build_type}} --output-on-failure
 
       - name: Coverage
         working-directory: ${{runner.workspace}}/build/
@@ -73,16 +73,8 @@ jobs:
       - name: Upload codecov
         uses: codecov/codecov-action@v5
         with:
-          fail_ci_if_error: true # optional (default = false)
+          fail_ci_if_error: true
           files: ${{runner.workspace}}/build/coverage.info
-#          flags: unittests # optional
-#          name: codecov-umbrella # optional
-          verbose: true # optional (default = false)
+          verbose: true
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-#      - name: Coverage
-#        shell: bash
-#        env:
-#          CODECOV_TOKEN: "7526d1fa-caa6-41f8-9ed0-41982d2504d4"
-#        working-directory: ${{runner.workspace}}/build
-#        run: bash <(curl -s https://codecov.io/bash)
