--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -4,22 +4,21 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: macos-10.15
+    runs-on: macos-15
     strategy:
       matrix:
         build_type: [Debug]
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-      - name: Install and configure Conan
-        run: |
-          brew install conan@1.62.0
-          conan profile list
-          conan profile new default --detect
-          conan profile update settings.compiler.libcxx=libstdc++11 default
-          conan profile update conf.tools.system.package_manager:mode=install default
-          conan profile show default
+      - name: Setup Conan Client
+        uses: conan-io/setup-conan@v1
+        with:
+          conan_audit_token: ${{ secrets.CONAN_AUDIT_TOKEN }}
+          cache_packages: true
+          use_venv: true
 
       - name: Create Build Environment
         run: |
@@ -30,18 +29,22 @@ jobs:
         working-directory: ${{runner.workspace}}/build
         run: conan install $GITHUB_WORKSPACE
 
-      - name: CMake Configure
+      - name: Run CMake Configure
         working-directory: ${{runner.workspace}}/build
+        env:
+          CXX: ${{matrix.cxx}}
         run: |
-          cmake -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
-                -DCMAKE_MODULE_PATH=$PWD -DENABLE_TESTS=True \
-                -DENABLE_COVERAGE=False -DCMAKE_MACOSX_RPATH=False \
-                $GITHUB_WORKSPACE
+          cmake -S ${GITHUB_WORKSPACE} \
+                -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES="${GITHUB_WORKSPACE}/cmake/conan_provider.cmake" \
+                -DCMAKE_BUILD_TYPE=${{matrix.build_type}} \
+                -DENABLE_TESTS=True \
+                -DENABLE_COVERAGE=False \
+                -DCMAKE_MACOSX_RPATH=False
 
       - name: CMake Build
         working-directory: ${{runner.workspace}}/build
         run: cmake --build . --config ${{matrix.build_type}}
 
-      - name: Test
-        working-directory: ${{runner.workspace}}/build
-        run: ctest -V -C ${{matrix.build_type}} --output-on-failure
+      - name: Run CTest
+        working-directory: ${{runner.workspace}}/build/
+        run: ctest --progress --build-config ${{matrix.build_type}} --output-on-failure
